<resources>
    <string name="app_name">Curriculum Vitae</string>
    <string name="cv_name">Guilherme Simões</string>
    <string name="cv_contact">aluno25259@ipt.pt | 912345678 | Rua das Marias</string>
    <string name="cv_summary">Trabalhei para a NASA e para a Microsoft.</string>
    <string name="cv_education_title">Mestre</string>
    <string name="cv_education">Mestrado em Engenharia informática, IPT, 2025/2026</string>
    <string name="cv_experience_title">Experiência</string>
    <string name="cv_experience">Diretor, NASA, 2003-2025</string>
    <string name="cv_skills_title">Habilidades</string>
    <string name="cv_skills">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque fringilla ex a odio placerat, nec consequat erat porta. Aliquam vitae volutpat nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer a massa ullamcorper libero fringilla fermentum. Duis gravida eleifend fringilla. Suspendisse hendrerit magna non dolor dictum, vitae elementum sapien auctor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent vel aliquet orci. Mauris vel tempus nibh. Aliquam rhoncus, tortor at ultricies accumsan, ligula nunc fringilla tortor, a sagittis purus est id risus. Nam tortor ligula, sodales eget est non, sodales eleifend ex.

Phasellus posuere metus at dolor egestas rutrum. In molestie nunc sed mauris vehicula luctus. Sed varius viverra sem. Sed et posuere nunc. Aliquam non sodales diam. Nunc accumsan aliquam ante in tristique. Ut sed porta lectus, vitae posuere quam. Duis nisl massa, vestibulum in condimentum at, gravida quis lorem. Duis a sapien dictum, pulvinar velit eu, consequat sem.

Integer imperdiet in turpis nec congue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis aliquam tincidunt lacus vitae pulvinar. Sed vulputate gravida nunc, sed facilisis augue facilisis non. In tempor, lacus et cursus rhoncus, neque ex aliquam urna, eu pellentesque mi lectus vel arcu. Maecenas nec enim magna. Praesent libero felis, tempus a pretium nec, imperdiet non nibh.

Nunc vitae nisi ut ex iaculis aliquam a eu arcu. Quisque luctus, elit sed ullamcorper efficitur, turpis neque auctor eros, at laoreet nisi eros vitae mi. Sed id orci ut nisl ullamcorper sollicitudin rutrum dignissim augue. Cras consequat mattis magna, eget tincidunt elit faucibus vel. Vestibulum felis magna, porttitor sit amet mattis quis, aliquet vitae magna. Duis dapibus auctor purus. Donec at tempus nisl, id finibus nunc.

Quisque faucibus sed tellus nec dictum. Nunc ornare nisl sem, quis ullamcorper nibh semper a. Cras eget lobortis libero, in faucibus ipsum. Ut nulla justo, cursus vel ipsum sed, vehicula efficitur nunc. Nulla magna lectus, rutrum sit amet velit sed, accumsan luctus nunc. Nullam non rhoncus justo. Sed lectus lectus, pharetra ac euismod id, imperdiet sed magna. Maecenas quis blandit velit. Ut quis luctus elit, sed vulputate tortor.

In gravida, nunc vel suscipit fermentum, tellus est efficitur dolor, eu rhoncus nunc velit eu ante. Curabitur dignissim odio quis feugiat finibus. Cras posuere ex justo. Nullam mauris purus, lacinia id eleifend quis, egestas quis ex. Vestibulum sed sagittis nibh. Vestibulum gravida gravida lacus, eu gravida velit facilisis nec. Pellentesque ornare est eget convallis bibendum. Vestibulum nisl ante, posuere ac tempus et, scelerisque nec metus. Fusce nec sem sit amet mi porttitor aliquet non sit amet turpis.

Phasellus feugiat interdum diam, et tristique tortor iaculis non. Nunc vel tortor et nisi pulvinar efficitur vitae nec massa. Vivamus diam neque, vehicula at urna eget, aliquam imperdiet ligula. Integer convallis felis laoreet turpis tempus, vitae egestas ex pharetra. Vivamus laoreet tincidunt nunc nec tincidunt. Integer iaculis turpis turpis, non elementum nisl dignissim eget. Vivamus eu dui volutpat ante varius laoreet ut id eros. Nam vehicula tincidunt nibh sed tempus. Vestibulum euismod tincidunt erat vel lobortis. Pellentesque non ex mattis, volutpat felis ut, hendrerit dolor. Nullam ut finibus sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque vitae ultrices dui, eget mollis risus. Donec non erat pulvinar enim accumsan varius nec eget eros. Duis tempor leo nisi, ut auctor dui finibus id.

Etiam finibus rutrum condimentum. Duis convallis lorem nunc, sed convallis felis tincidunt non. Nunc mattis turpis facilisis turpis lobortis gravida. Donec at arcu dolor. Sed non velit ipsum. Suspendisse ut felis euismod, posuere velit sit amet, mollis enim. Curabitur ut sem quis orci mattis vestibulum vitae vel libero. Donec ut tortor tellus. Ut fringilla nulla id arcu facilisis, sit amet suscipit leo cursus. Nam at dolor lorem. Phasellus viverra et mi sed mattis. Duis imperdiet nulla nec metus pellentesque, vel placerat leo laoreet. Praesent varius, purus ac eleifend egestas, velit elit cursus felis, in bibendum enim ligula non elit. Morbi tempor vehicula imperdiet. Sed iaculis cursus nisl, vel tristique leo volutpat at. Phasellus iaculis nibh elit.

Phasellus consectetur auctor sem, vitae tempus ipsum porta nec. Vestibulum ac lobortis nunc. Ut viverra nibh quam, sed iaculis sem venenatis non. Donec molestie euismod velit, ut laoreet diam cursus sed. Nunc tristique libero sed eros dapibus, sit amet elementum nibh vehicula. Cras vitae suscipit leo. Nam sodales tincidunt quam, sed lobortis enim ultrices ut.

Nulla eleifend nulla et commodo fermentum. Nam malesuada molestie justo id cursus. Donec nulla urna, molestie at rhoncus quis, sollicitudin eget mi. Fusce auctor, leo quis cursus suscipit, nibh nisi rhoncus nulla, sit amet auctor magna ligula non lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc et mi convallis, auctor sapien non, venenatis purus. Maecenas tempus sapien vel felis aliquet, a viverra nibh auctor.

Morbi mattis eleifend finibus. Fusce viverra lacus id turpis fringilla aliquet. Ut in vehicula dui, nec aliquet ligula. Fusce lacinia enim at orci ultricies, ut dapibus magna vestibulum. Vivamus luctus ac lectus a pellentesque. Proin id enim justo. Vivamus leo orci, sagittis in tortor ut, eleifend tristique purus. Mauris porttitor egestas ligula id interdum. Donec ac massa luctus, efficitur ante at, consectetur erat. Suspendisse potenti. Proin congue sapien a est tincidunt, quis gravida magna bibendum. Etiam vel odio venenatis, feugiat massa tincidunt, mollis velit.

Nunc vehicula neque quis efficitur hendrerit. Fusce mollis risus nec massa aliquet iaculis. Quisque dapibus tempor urna, nec faucibus sapien sollicitudin convallis. Suspendisse consequat vitae mi in viverra. Mauris volutpat congue justo, id iaculis diam tincidunt quis. Praesent mattis risus eu tortor volutpat suscipit. Nunc tincidunt leo eget sapien cursus elementum. Nunc in feugiat arcu. Nunc eget tincidunt augue. Nam vel urna eros. Curabitur et augue quis ex molestie interdum in in odio. Vestibulum sollicitudin metus cursus, varius felis ut, blandit tortor.

Aliquam ut dolor luctus, laoreet ligula in, semper dolor. Suspendisse pellentesque dui sit amet dapibus imperdiet. Maecenas dapibus ex dictum purus dignissim mattis. Proin venenatis vel nisi ut gravida. In eget enim vulputate, blandit elit quis, ornare libero. Phasellus sagittis.</string>


    <!-- João's CV -->
    <string name="cv_name_joao">João Joaquim</string>
    <string name="cv_contact_joao">aluno24729@ipt.pt | 987654321 | Rua dos Anjos</string>
    <string name="cv_summary_joao">Desenvolvedor Android com experiência em startups.</string>
    <string name="cv_education_title_joao">Licenciado</string>
    <string name="cv_education_joao">Licenciatura em Engenharia Informática, IPT, 2022/2025</string>
    <string name="cv_experience_title_joao">Experiência</string>
    <string name="cv_experience_joao">Desenvolvedor, Startup X, 2022-2025</string>
    <string name="cv_skills_title_joao">Habilidades</string>
    <string name="cv_skills_joao">Kotlin, Java, Android Studio, Firebase, Git, UI/UX Design.</string>
</resources>